@@ -28,11 +28,20 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
+        <version>3.8.1</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-          <compilerArgument>-XDignore.symbol.file=true</compilerArgument>
+          <source>11</source>
+          <target>11</target>
+          <compilerArgs>
+            <arg>-XDignore.symbol.file=true</arg>
+            <arg>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.desktop/sun.awt.event=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/sun.security.action=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
